--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-    "name": "test",
-    "logo": "uni.png",
+    "name": "Test",
     "topbar": 
     {
         "Home": "index.php",
         "Products": "products.php",
         "About": "about.php",
         "Contact": "contact.php"
-    }
+    },
+    "copyright": "© 2024"
 }
