--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
         "Home": "index.php",
         "Categories": "categories.php",
         "About": "about.php",
-        "Contact": "contact.php"
+        "Contact": "contacts.php"
     },
     "database": 
     {
